--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "tailwind": "npx tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gravitylabs/react-native-web": "^0.18.9-1",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
@@ -36,7 +38,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "npm:@gravitylabs/react-native-web"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
